corrigindo erro 401 mudando a logica pelo copilet da idea